--- a/project.json
+++ b/project.json
@@ -9,7 +9,6 @@
     "UiPath.FormActivityLibrary": "[1.9.6]",
     "UiPath.Mail.Activities": "[1.12.3]",
     "UiPath.Persistence.Activities": "[1.4.0]",
-    "UiPath.Presentations.Activities": "[1.3.4]",
     "UiPath.System.Activities": "[21.10.4]",
     "UiPath.UIAutomation.Activities": "[21.10.5]"
   },
@@ -50,8 +49,14 @@
   "expressionLanguage": "CSharp",
   "entryPoints": [
     {
+      "filePath": "Trash\\Main1.xaml",
+      "uniqueId": "ad28798e-e7e1-4367-b0d6-94c318d5bf07",
+      "input": [],
+      "output": []
+    },
+    {
       "filePath": "Main.xaml",
-      "uniqueId": "67520d7b-9c02-44a0-88da-2def37e3c828",
+      "uniqueId": "5d3eb2aa-da7f-447b-9e17-ddc1faa555ad",
       "input": [],
       "output": []
     }
