--- a/.settings/TemplatePropertiesSettings.json
+++ b/.settings/TemplatePropertiesSettings.json
@@ -1,1 +1,1 @@
-{"Workflows":[{"FilePath":"Downloads/Download_MDB_Report.xaml","Activities":null}]}
+{"Workflows":[{"FilePath":"Downloads/Download_MDB_Report.xaml","Activities":null},{"FilePath":"Trash/Main1.xaml","Activities":null},{"FilePath":"Main.xaml","Activities":null}]}
